--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Quarto Presentations Template 01"
-subtitle: "Create beautiful interactive slide decks with Reveal.js"
+title: "Introduction to git and github"
+subtitle: ""
 
 format:
   revealjs: 
@@ -23,12 +23,12 @@ format:
 # {.title-slide .centeredslide background-iframe="https://saforem2.github.io/grid-worms-animation/" loading="lazy"}
 
 ::: {style="background-color: rgba(22,22,22,0.75); border-radius: 10px; text-align:center; padding: 0px; padding-left: 1.5em; padding-right: 1.5em; max-width: min-content; min-width: max-content; margin-left: auto; margin-right: auto; padding-top: 0.2em; padding-bottom: 0.2em; line-height: 1.5em!important;"}
-<span style="color:#939393; font-size:1.5em; font-weight: bold;">Main title</span>  
-<span style="color:#777777; font-size:1.2em; font-weight: bold;">secondary title</span>  
+<span style="color:#939393; font-size:1.5em; font-weight: bold;">Introduction to git and github</span>  
+<span style="color:#777777; font-size:1.2em; font-weight: bold;"></span>  
 [<br>&nbsp;]{style="padding-bottom: 0.5rem;"}  
 [{{< fa solid home >}}](http://mxochicale.github.io/) Miguel Xochicale  
-[contributor A and contributor B]{.dim-text style="font-size:0.8em;"}  
-[[[{{< fa brands github >}} `mxochicale/`](https://github.com/mxochicale/)]{style="border-bottom: 0.5px solid #00ccff;"}`{`[[`tools`](https://github.com/mxochicale/tools)]{style="border-bottom: 0.5px solid #00ccff;"}, [[`code`](https://github.com/mxochicale/code)]{style="border-bottom: 0.5px solid #00ccff;"}`}`]{style="font-size:0.8em;"}
+[Zakaria Senousy]{.dim-text style="font-size:0.8em;"}  
+[[[{{< fa brands github >}} `mxochicale/`](https://github.com/mxochicale/)]{style="border-bottom: 0.5px solid #00ccff;"}`{`[[`intro-to-git-and-github`](https://github.com/mxochicale/intro-to-git-and-github)]{style="border-bottom: 0.5px solid #00ccff;"}`}`]{style="font-size:0.8em;"}
 :::
 
 ::: footer
