--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -38,17 +38,12 @@ format:
 
 # Overview
 
-1. [Background: `{MCMC,HMC}`](#markov-chain-monte-carlo-mcmc-centeredslide)
-    - [Leapfrog Integrator](#leapfrog-integrator-hmc-centeredslide)
-    - [Issues with HMC](#sec-issues-with-hmc)
-    - [Can we do better?](#sec-can-we-do-better)
-2. [L2HMC: Generalizing MD](#sec-l2hmc)
-    - [4D $SU(3)$ Model](#sec-su3)
-    - [Results](#sec-results)
+1. [Automated Version Control](#markov-chain-monte-carlo-mcmc-centeredslide)
+    - [What is it? Why shoud I care?](#sec-issues-with-hmc)
+2. [GitHub workflow](#sec-l2hmc)
+    - [issues, branches, PRs](#sec-su3)
 3. [References](#sec-references)
-4. [Extras](#sec-extras)
-
-
+4. [Exercises](#sec-extras)
 
 
 ## Housekeeping :robot:
