--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -228,6 +228,7 @@ Learn more: [Absolute Position](https://quarto.org/docs/presentations/revealjs/a
 ## References
 - [Version Control with Git](https://github-pages.ucl.ac.uk/git-novice/01-basics.html)
 - [Version Control with Mercurial](https://swcarpentry.github.io/hg-novice/)
+- [Introduction to Version Control]](https://github.com/UCL/rsd-engineeringcourse/tree/main/ch00git)
 
 ::: footer
 Learn more: [Quarto Presentations](https://quarto.org/docs/presentations/revealjs/)
