--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -54,16 +54,16 @@ format:
 - Keeps track of every modification to the code in a special kind of database.
 - If a mistake is made, developers can turn back the clock and compare earlier versions of the code to help fix the mistake while minimising disruption to all team members.
 
-![](figures/version-control-what-is-it.jpeg}
-![](figures/version-control-what-should-i-care.jpeg}
+![](figures/version-control-what-is-it.png}
 
-## Why Should You Care?
+## Automated Version Control: What should I care?
   - **Backup and Restore**: Changes are stored securely and can be restored at any point.
   - **Collaboration**: Multiple people can work on the same project at the same time.
   - **Track Changes**: You can see who last modified something that might be causing a problem, who introduced an issue, when it was introduced, and more.
   - **Explore Alternatives**: Safely experiment with new ideas in a branch, without affecting the main project.
 
----
+![](figures/version-control-what-should-i-care-B.png}
+![](figures/version-control-what-should-i-care-A.png}
 
 
 ## Introduction to Git and GitHub
