--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -49,12 +49,12 @@ format:
 
 ## Automated Version Control
 
-- **What is Automated Version Control?**
-  - A system that automatically manages changes to files, typically in the context of software development.
-  - Keeps track of every modification to the code in a special kind of database.
-  - If a mistake is made, developers can turn back the clock and compare earlier versions of the code to help fix the mistake while minimising disruption to all team members.
+- A system that automatically manages changes to files, typically in the context of software development.
+- Keeps track of every modification to the code in a special kind of database.
+- If a mistake is made, developers can turn back the clock and compare earlier versions of the code to help fix the mistake while minimising disruption to all team members.
 
-- **Why Should You Care?**
+
+### Why Should You Care?
   - **Backup and Restore**: Changes are stored securely and can be restored at any point.
   - **Collaboration**: Multiple people can work on the same project at the same time.
   - **Track Changes**: You can see who last modified something that might be causing a problem, who introduced an issue, when it was introduced, and more.
@@ -71,6 +71,7 @@ format:
   - Track changes in your code across versions.
   - Collaborate with others on projects.
   - Backup your work on the cloud.
+
 
 ## Git command Basics
 
