modifying tabs in "other useful git commands"

--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -136,19 +136,20 @@ format:
 ## Other Useful Git Commands
 
 ::: {.panel-tabset}
-- **Branch Management**:
+
+### Branch Management
   - `git branch`: List, create, or delete branches.
   - `git switch <branch>`: Switch branches.
 
 ---
 
-- **Investigating Changes**:
+### Investigating Changes
   - `git log`: Display commit logs.
   - `git diff`: Show file differences not yet staged.
 
 ---
 
-- **Reorganising Commits**:
+### Reorganising Commits
   - `git rebase`: Reapply commits on top of another base tip.
 
 ---
