--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -55,16 +55,20 @@ format:
 - Keeps track of every modification to the code in a special kind of database.
 - If a mistake is made, developers can turn back the clock and compare earlier versions of the code to help fix the mistake while minimising disruption to all team members.
 
-## Automated Version Control: What should I care?
-![](figures/version-control-what-should-i-care-B.png)
+## Automated Version Control 
+### What should I care?
 ![](figures/version-control-what-should-i-care-A.png)
 
-## Automated Version Control: What should I care?
+## Automated Version Control 
+### What should I care?
+![](figures/version-control-what-should-i-care-A.png)
+
+## Automated Version Control
+### What should I care?
   - **Backup and restore**: Changes are stored securely and can be restored at any point.
   - **Collaboration**: Multiple people can work on the same project at the same time.
   - **Track changes**: You can see who last modified something that might be causing a problem, who introduced an issue, when it was introduced, and more.
   - **Explore alternatives**: Safely experiment with new ideas in a branch, without affecting the main project.
-
 
 ## Introduction to Git and GitHub
 - **Git**: A version control system that lets you manage and keep track of your source code history.
@@ -227,14 +231,7 @@ Learn more: [Absolute Position](https://quarto.org/docs/presentations/revealjs/a
 ## References
 - [Version Control with Git](https://github-pages.ucl.ac.uk/git-novice/01-basics.html)
 - [Version Control with Mercurial](https://swcarpentry.github.io/hg-novice/)
-- [Introduction to Version Control]](https://github.com/UCL/rsd-engineeringcourse/tree/main/ch00git)
+- [Introduction to Version Control](https://github.com/UCL/rsd-engineeringcourse/tree/main/ch00git)
 - [Resolving a merge conflict using the command line](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/addressing-merge-conflicts/resolving-a-merge-conflict-using-the-command-line)
-
-::: footer
-Learn more: [Quarto Presentations](https://quarto.org/docs/presentations/revealjs/)
-:::
-
-
-
 
 
