--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -47,21 +47,19 @@ format:
 3. [References](#sec-references)
 4. [Exercises](#sec-extras)
 
-## Automated Version Control
+## Automated Version Control (AVC)
 ![](figures/version-control-what-is-it.png)
 
-## Automated Version Control
+## Automated Version Control (AVC)
 - A system that automatically manages changes to files, typically in the context of software development.
 - Keeps track of every modification to the code in a special kind of database.
 - If a mistake is made, developers can turn back the clock and compare earlier versions of the code to help fix the mistake while minimising disruption to all team members.
 
-## Automated Version Control 
-### What should I care?
+## AVC: What should I care?
 ![](figures/version-control-what-should-i-care-A.png)
 
-## Automated Version Control 
-### What should I care?
-![](figures/version-control-what-should-i-care-A.png)
+## AVC: What should I care?
+![](figures/version-control-what-should-i-care-B.png)
 
 ## Automated Version Control
 ### What should I care?
