adding a slide with figure for git data transport commands

--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -164,6 +164,9 @@ format:
 :::
 
 
+## Git data transport commands
+![](figures/git_data_transport_diagram.png)
+
 ## GitHub workflow
 ::: {#sec-gf}
 ![](figures/github-workflow.png)
