adds details for exercise; tidies template for exercise; CI; #6

--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -178,16 +178,13 @@ format:
 ![](figures/github-branches.png)
 :::
 
-## GitHub workflow
-::: {#sec-gb}
-![](figures/github-concepts.png)
-:::
-
-
-
 
 ## Exercises
 ### 🥑 How to Make the Best Guacamole?
+
+- Create SSH keys
+- `git clone git@github.com:mxochicale/intro-to-git-and-github.git`
+- Raise a new issue with the tamplate `How to Make the Best Guacamole?`
 
 
 ## References
